--- a/iam3d.html
+++ b/iam3d.html
@@ -2,38 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio | Skyler Fellenz</title>
+    <title>IAM3D | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#">Projects ▼</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding <span class="status-label">(Coming Soon)</span></a></li>
-                        <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP <span class="status-label">(Coming Soon)</span></a></li>
-                        <li><a href="iam3d.html">IAM3D <span class="status-label">(Coming Soon)</span></a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <nav><ul class="nav-links">
+            <li><a href="index.html#about">About</a></li>
+            <li><a href="index.html#resume">Resume</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
+            <li class="dropdown">
+                <a href="#">Projects ▼</a>
+                <ul class="dropdown-menu">
+                    <li><a href="coding.html">Coding</a></li>
+                    <li><a href="eml2023.html">EML2023</a></li>
+                    <li><a href="grip.html">GRiP</a></li>
+                    <li><a href="iam3d.html">IAM3D</a></li>
+                </ul>
+            </li>
+        </ul></nav>
     </header>
 
     <div class="container">
-        <h1>IAM3D: Additive Manufacturing</h1> 
-        <div class="file-grid">
-            <div class="file-card" style="opacity: 0.6; text-align: center; padding: 60px;">
-                <h2 style="color: var(--sky-blue); margin-bottom: 20px;">Coming Soon</h2>
-                <p>Technical files and documentation for this section are currently being prepared for upload.</p>
-                <a href="index.html#contact" class="btn-download">Contact for Details</a>
-            </div>
+        <h2 class="section-title">IAM3D: Additive Manufacturing</h2>
+        <div class="file-card" style="opacity: 0.7;">
+            <p>Details on 3D printing lab operations, additive manufacturing processes, and specialized part production workflows.</p>
+            <p><strong>Status:</strong> Case studies and process documentation are currently under review.</p>
+            <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Under Construction</a>
         </div>
     </div>
     <footer>&copy; 2026 Skyler Fellenz</footer>
