--- a/coding.html
+++ b/coding.html
@@ -26,10 +26,17 @@
 
     <div class="container">
         <h2 class="section-title">Engineering Analysis & Coding</h2>
-        <div class="file-card" style="opacity: 0.7;">
-            <p>This section will feature scripts and tools developed for engineering analysis, including MATLAB simulations and custom data processing workflows.</p>
-            <p><strong>Status:</strong> Documentation and code repositories are currently being organized for upload.</p>
-            <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Coming Soon</a>
+        <div class="file-grid" style="display: flex; flex-direction: column; gap: 15px;">
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>MATLAB Scripts</h3>
+                <p>Numerical analysis and simulation data. (Coming Soon)</p>
+                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
+            </div>
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Python Workflows</h3>
+                <p>Automation tools and data visualization scripts. (Coming Soon)</p>
+                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
+            </div>
         </div>
     </div>
     <footer>&copy; 2026 Skyler Fellenz</footer>
