--- a/iam3d.html
+++ b/iam3d.html
@@ -26,10 +26,17 @@
 
     <div class="container">
         <h2 class="section-title">IAM3D: Additive Manufacturing</h2>
-        <div class="file-card" style="opacity: 0.7;">
-            <p>Details on 3D printing lab operations, additive manufacturing processes, and specialized part production workflows.</p>
-            <p><strong>Status:</strong> Case studies and process documentation are currently under review.</p>
-            <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Under Construction</a>
+        <div class="file-grid" style="display: flex; flex-direction: column; gap: 15px;">
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Lab Operations</h3>
+                <p>Documentation on 3D printing workflows and maintenance. (Coming Soon)</p>
+                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
+            </div>
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Print Optimization</h3>
+                <p>Studies on material strength and print orientation. (Coming Soon)</p>
+                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
+            </div>
         </div>
     </div>
     <footer>&copy; 2026 Skyler Fellenz</footer>
