--- a/grip.html
+++ b/grip.html
@@ -26,10 +26,17 @@
 
     <div class="container">
         <h2 class="section-title">GRiP: Generational Relief in Prosthetics</h2>
-        <div class="file-card" style="opacity: 0.7;">
-            <p>Featuring mechanical design work for assistive devices, CAD assemblies in SOLIDWORKS, and collaborative interface documentation.</p>
-            <p><strong>Status:</strong> Project files and design summaries are being prepared for public release.</p>
-            <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Documentation Pending</a>
+        <div class="file-grid" style="display: flex; flex-direction: column; gap: 15px;">
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Prosthetic Design</h3>
+                <p>CAD assemblies for assistive devices. (Coming Soon)</p>
+                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
+            </div>
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Technical Drawings</h3>
+                <p>Build-to-print documentation for device manufacturing. (Coming Soon)</p>
+                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
+            </div>
         </div>
     </div>
     <footer>&copy; 2026 Skyler Fellenz</footer>
