--- a/eml2023.html
+++ b/eml2023.html
@@ -26,13 +26,29 @@
 
     <div class="container">
         <h2 class="section-title">EML 2023: Design & Manufacturing</h2>
+        
         <div class="file-grid" style="display: flex; flex-direction: column; gap: 15px;">
+            
             <div class="file-card">
                 <h3>Component Parts</h3>
-                <p>Individual CAD parts designed with parametric modeling.</p>
+                <p>Individual CAD parts designed with parametric modeling. These files showcase clean feature trees and design intent.</p>
                 <a href="cad_files/parts_package.zip" class="btn-download" download>Download Parts (.zip)</a>
             </div>
+
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Assemblies</h3>
+                <p>Full system assemblies featuring proper constraints, interference checks, and motion analysis.</p>
+                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
+            </div>
+
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Engineering Drawings</h3>
+                <p>Detailed technical drawings including exploded views, BOMs, and GD&T referencing.</p>
+                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
+            </div>
+
         </div>
     </div>
+    <footer>&copy; 2026 Skyler Fellenz</footer>
 </body>
 </html>
