--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding</a></li>
+                        <li><a href="coding.html">Coding <span class="status-label">Coming Soon</span></a></li>
                         <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP</a></li>
-                        <li><a href="iam3d.html">IAM3D</a></li>
+                        <li><a href="grip.html">GRiP <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="iam3d.html">IAM3D <span class="status-label">Coming Soon</span></a></li>
                     </ul>
                 </li>
             </ul>
