--- a/iam3d.html
+++ b/iam3d.html
@@ -8,35 +8,37 @@
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav><ul class="nav-links">
-            <li><a href="index.html#about">About</a></li>
-            <li><a href="index.html#resume">Resume</a></li>
-            <li><a href="index.html#contact">Contact</a></li>
-            <li class="dropdown">
-                <a href="#">Projects ▼</a>
-                <ul class="dropdown-menu">
-                    <li><a href="coding.html">Coding</a></li>
-                    <li><a href="eml2023.html">EML2023</a></li>
-                    <li><a href="grip.html">GRiP</a></li>
-                    <li><a href="iam3d.html">IAM3D</a></li>
-                </ul>
-            </li>
-        </ul></nav>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
+                <li class="dropdown">
+                    <a href="#">Projects ▼</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="coding.html">Coding <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="eml2023.html">EML2023</a></li>
+                        <li><a href="grip.html">GRiP <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="iam3d.html">IAM3D <span class="status-label">Coming Soon</span></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <div class="container">
         <h2 class="section-title">IAM3D: Additive Manufacturing</h2>
-        <div class="file-grid" style="display: flex; flex-direction: column; gap: 15px;">
-            <div class="file-card" style="opacity: 0.6;">
-                <h3>Lab Operations</h3>
-                <p>Documentation on 3D printing workflows and maintenance. (Coming Soon)</p>
-                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
-            </div>
-            <div class="file-card" style="opacity: 0.6;">
-                <h3>Print Optimization</h3>
-                <p>Studies on material strength and print orientation. (Coming Soon)</p>
-                <a href="#" class="btn-download" style="background: #475569; cursor: not-allowed;">Locked</a>
-            </div>
+        
+        <div class="file-card" style="opacity: 0.6;">
+            <h3>Lab Operations</h3>
+            <p>Documentation on industrial 3D printing workflows and material maintenance.</p>
+            <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
+        </div>
+
+        <div class="file-card" style="opacity: 0.6;">
+            <h3>Process Optimization</h3>
+            <p>Studies on part orientation, support structures, and print repeatability.</p>
+            <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
         </div>
     </div>
     <footer>&copy; 2026 Skyler Fellenz</footer>
