--- a/eml2023.html
+++ b/eml2023.html
@@ -16,10 +16,10 @@
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="coding.html">Coding <span class="status-label">(Coming Soon)</span></a></li>
                         <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP <span class="status-label">Coming Soon</span></a></li>
-                        <li><a href="iam3d.html">IAM3D <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="grip.html">GRiP <span class="status-label">(Coming Soon)</span></a></li>
+                        <li><a href="iam3d.html">IAM3D <span class="status-label">(Coming Soon)</span></a></li>
                     </ul>
                 </li>
             </ul>
@@ -31,19 +31,13 @@
         
         <div class="file-card">
             <h3>Component Parts</h3>
-            <p>Individual CAD parts designed with parametric modeling. These files showcase clean feature trees and design intent.</p>
+            <p>Individual CAD parts designed with parametric modeling.</p>
             <a href="cad_files/parts_package.zip" class="btn-download" download>Download Parts (.zip)</a>
         </div>
 
-        <div class="file-card" style="opacity: 0.6;">
+        <div class="file-card card-disabled">
             <h3>Assemblies</h3>
-            <p>Full system assemblies featuring proper constraints, interference checks, and motion analysis.</p>
-            <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
-        </div>
-
-        <div class="file-card" style="opacity: 0.6;">
-            <h3>Engineering Drawings</h3>
-            <p>Detailed technical drawings including exploded views, BOMs, and GD&T referencing.</p>
+            <p>Full system assemblies and interference checks.</p>
             <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
         </div>
     </div>
