--- a/coding.html
+++ b/coding.html
@@ -16,10 +16,10 @@
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="coding.html">Coding <span class="status-label">(Coming Soon)</span></a></li>
                         <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP <span class="status-label">Coming Soon</span></a></li>
-                        <li><a href="iam3d.html">IAM3D <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="grip.html">GRiP <span class="status-label">(Coming Soon)</span></a></li>
+                        <li><a href="iam3d.html">IAM3D <span class="status-label">(Coming Soon)</span></a></li>
                     </ul>
                 </li>
             </ul>
@@ -29,13 +29,13 @@
     <div class="container">
         <h2 class="section-title">Engineering Analysis & Coding</h2>
         
-        <div class="file-card" style="opacity: 0.6;">
+        <div class="file-card card-disabled">
             <h3>MATLAB Simulations</h3>
             <p>Scripts for numerical analysis, mechanical system modeling, and data visualization.</p>
             <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
         </div>
 
-        <div class="file-card" style="opacity: 0.6;">
+        <div class="file-card card-disabled">
             <h3>Python Tools</h3>
             <p>Automation scripts and data processing workflows for engineering applications.</p>
             <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
