--- a/iam3d.html
+++ b/iam3d.html
@@ -16,10 +16,10 @@
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="coding.html">Coding <span class="status-label">(Coming Soon)</span></a></li>
                         <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP <span class="status-label">Coming Soon</span></a></li>
-                        <li><a href="iam3d.html">IAM3D <span class="status-label">Coming Soon</span></a></li>
+                        <li><a href="grip.html">GRiP <span class="status-label">(Coming Soon)</span></a></li>
+                        <li><a href="iam3d.html">IAM3D <span class="status-label">(Coming Soon)</span></a></li>
                     </ul>
                 </li>
             </ul>
@@ -29,13 +29,13 @@
     <div class="container">
         <h2 class="section-title">IAM3D: Additive Manufacturing</h2>
         
-        <div class="file-card" style="opacity: 0.6;">
+        <div class="file-card card-disabled">
             <h3>Lab Operations</h3>
             <p>Documentation on industrial 3D printing workflows and material maintenance.</p>
             <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
         </div>
 
-        <div class="file-card" style="opacity: 0.6;">
+        <div class="file-card card-disabled">
             <h3>Process Optimization</h3>
             <p>Studies on part orientation, support structures, and print repeatability.</p>
             <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
