--- a/eml2023.html
+++ b/eml2023.html
@@ -31,14 +31,20 @@
         
         <div class="file-card">
             <h3>Component Parts</h3>
-            <p>Individual CAD parts designed with parametric modeling.</p>
+            <p>Individual CAD parts designed with parametric modeling. These files showcase clean feature trees and design intent.</p>
             <a href="cad_files/parts_package.zip" class="btn-download" download>Download Parts (.zip)</a>
         </div>
 
         <div class="file-card card-disabled">
             <h3>Assemblies</h3>
-            <p>Full system assemblies and interference checks.</p>
-            <a href="#" class="btn-download btn-coming-soon">Coming Soon</a>
+            <p>Full system assemblies featuring proper constraints, interference checks, and motion analysis.</p>
+            <a href="#" class="btn-download btn-coming-soon">(Coming Soon)</a>
+        </div>
+
+        <div class="file-card card-disabled">
+            <h3>Engineering Drawings</h3>
+            <p>Detailed technical drawings including exploded views, BOMs, and GD&T referencing. These were completed for EML2023 in Summer 2025 and follow the "Less Boring Lectures" video series standards.</p>
+            <a href="#" class="btn-download btn-coming-soon">(Coming Soon)</a>
         </div>
     </div>
     <footer>&copy; 2026 Skyler Fellenz</footer>
