--- a/eml2023.html
+++ b/eml2023.html
@@ -29,6 +29,12 @@
     <div class="container">
         <h2 class="section-title">EML 2023: Design & Manufacturing</h2>
         
+        <p style="margin-bottom: 30px; color: var(--text-dim);">
+            The following documentation and CAD assemblies were completed for <strong>EML2023 in Summer 2025</strong>. 
+            The design workflows and technical standards throughout this project follow the 
+            <strong>"Less Boring Lectures"</strong> video series.
+        </p>
+        
         <div class="file-card">
             <h3>Component Parts</h3>
             <p>Individual CAD parts designed with parametric modeling. These files showcase clean feature trees and design intent.</p>
@@ -43,7 +49,7 @@
 
         <div class="file-card card-disabled">
             <h3>Engineering Drawings</h3>
-            <p>Detailed technical drawings including exploded views, BOMs, and GD&T referencing. These were completed for EML2023 in Summer 2025 and follow the "Less Boring Lectures" video series standards.</p>
+            <p>Detailed technical drawings including exploded views, BOMs, and GD&T referencing.</p>
             <a href="#" class="btn-download btn-coming-soon">(Coming Soon)</a>
         </div>
     </div>
